added another page for each invoice

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,8 @@
 .overview::-webkit-scrollbar-thumb {
   background-color: var(--color-primary);
 }
+
+.flow::-webkit-scrollbar {
+  height: 0;
+  width: 0;
+}
